# cpp_object

./: CMakeLists.txt  Fasta_reader.cpp  Fasta_reader.h  Genome.fasta  MDNA.cpp  MDNA.h  MotifsClass.h  Sequence.cpp  Sequence.h  SequenceClass.h  main  main.cpp  motif.fasta  rosalind_dna.txt
